Обнаружил, что чистка репозитория поломала все

--- a/.gitignore
+++ b/.gitignore
@@ -398,3 +398,30 @@ doc/*
 /yo-complete
 /yo-complete.cmd
 /yo.cmd
+/marked
+/marked.cmd
+/package.json.bak
+/package2.json
+/shjs
+/shjs.cmd
+/prettier
+/rc
+/rimraf
+/sane
+/semver
+/sha.js
+/sshpk-conv
+/sshpk-sign
+/sshpk-verify
+/terser
+/ts-jest
+/ts-node
+/tsc
+/tslint
+/tsserver
+/uglifyjs
+/uuid
+/watch
+/webpack
+/webpack-cli
+/which
