--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
-{
-  "name": "nest",
+﻿{
+  "name": "NGNB",
   "version": "1.0.0",
-  "description": "Nest starter repository",
-  "license": "MIT",
+  "description": "Nick Galko example backend based on NestJS",
+  "license": "Proprietary",
   "scripts": {
     "build": "tsc",
+    "doc": "typedoc --out ./doc ./src",
     "format": "prettier --write \"src/**/*.ts\"",
     "start": "ts-node src/main.ts",
     "start:dev": "nodemon",
@@ -27,6 +28,12 @@
     "@nestjs/websockets": "^5.1.0",
     "@types/express": "4.16.0",
     "@types/node": "^10.7.1",
+    "@nestjs/passport":"^6.1.1",
+    "passport":"^0.4.1",
+    "passport-local":"^1.0.0",
+    "@nestjs/jwt":"^6.1.1",
+    "@types/passport-jwt":"^3.0.3",
+    "passport-jwt":"^4.0.0",
     "hbs": "4.0.3",
     "reflect-metadata": "^0.1.12",
     "rxjs": "^6.2.2",
@@ -41,6 +48,7 @@
     "prettier": "^1.14.2",
     "rimraf": "^2.6.2",
     "supertest": "^3.1.0",
+    "typedoc":"^0.16.9",
     "ts-jest": "^23.1.3",
     "ts-loader": "^4.4.2",
     "ts-node": "^7.0.1",
