clean updated readme.md

--- a/.gitignore
+++ b/.gitignore
@@ -425,3 +425,27 @@ doc/*
 /webpack
 /webpack-cli
 /which
+/acorn
+/atob
+/babylon
+/errno
+/escodegen
+/esgenerate
+/esparse
+/esvalidate
+/handlebars
+/import-local-fixture
+/is-ci
+/jest
+/jest-runtime
+/js-yaml
+/jsesc
+/json5
+/loose-envify
+/miller-rabin
+/mime
+/mkdirp
+/nodemon
+/nodetouch
+/nopt
+/opencollective
