--- a/package.json
+++ b/package.json
@@ -1,62 +1,67 @@
-﻿{
-  "name": "NGNB",
-  "version": "1.0.0",
-  "description": "Nick Galko example backend based on NestJS",
-  "license": "Proprietary",
+{
+  "name": "ngnb",
+  "version": "0.0.1",
+  "description": "",
+  "author": "",
+  "private": true,
+  "license": "UNLICENSED",
   "scripts": {
-    "build": "tsc",
-    "doc": "typedoc --out ./doc ./src",
-    "format": "prettier --write \"src/**/*.ts\"",
-    "start": "ts-node src/main.ts",
-    "start:dev": "nodemon",
-    "start:debug": "nodemon --config nodemon-debug.json",
-    "prestart:prod": "rimraf dist && tsc",
-    "start:prod": "node dist/main.js",
-    "start:hmr": "node dist/server",
-    "lint": "tslint -p tsconfig.json -c tslint.json",
+    "prebuild": "rimraf dist",
+    "build": "nest build",
+    "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
+    "start": "nest start",
+    "start:dev": "nest start --watch",
+    "start:debug": "nest start --debug --watch",
+    "start:prod": "node dist/main",
+    "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
-    "test:e2e": "jest --config ./test/jest-e2e.json",
-    "webpack": "webpack --config webpack.config.js"
+    "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
+    "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
-    "@nestjs/common": "^5.1.0",
-    "@nestjs/core": "^5.1.0",
-    "@nestjs/microservices": "^5.1.0",
-    "@nestjs/testing": "^5.1.0",
-    "@nestjs/websockets": "^5.1.0",
-    "@types/express": "4.16.0",
-    "@types/node": "^10.7.1",
-    "@nestjs/passport":"^6.1.1",
-    "passport":"^0.4.1",
-    "passport-local":"^1.0.0",
-    "@nestjs/jwt":"^6.1.1",
-    "@types/passport-jwt":"^3.0.3",
-    "passport-jwt":"^4.0.0",
-    "hbs": "4.0.3",
-    "reflect-metadata": "^0.1.12",
-    "rxjs": "^6.2.2",
-    "typescript": "^3.0.1"
+    "@nestjs/common": "^8.0.0",
+    "@nestjs/core": "^8.0.0",
+    "@nestjs/jwt": "^8.0.0",
+    "@nestjs/passport": "^8.0.1",
+    "@nestjs/platform-express": "^8.0.0",
+    "@nestjs/swagger": "^5.1.4",
+    "compression": "^1.7.4",
+    "csurf": "^1.11.0",
+    "helmet": "^4.6.0",
+    "passport": "^0.4.1",
+    "passport-jwt": "^4.0.0",
+    "passport-local": "^1.0.0",
+    "reflect-metadata": "^0.1.13",
+    "rimraf": "^3.0.2",
+    "rxjs": "^7.2.0",
+    "swagger-ui-express": "^4.1.6"
   },
   "devDependencies": {
-    "@types/express": "^4.16.0",
-    "@types/jest": "^23.3.1",
-    "@types/supertest": "^2.0.5",
-    "jest": "^23.5.0",
-    "nodemon": "^1.18.3",
-    "prettier": "^1.14.2",
-    "rimraf": "^2.6.2",
-    "supertest": "^3.1.0",
-    "typedoc":"^0.16.9",
-    "ts-jest": "^23.1.3",
-    "ts-loader": "^4.4.2",
-    "ts-node": "^7.0.1",
-    "tsconfig-paths": "^3.5.0",
-    "tslint": "5.11.0",
-    "webpack": "^4.16.5",
-    "webpack-cli": "^3.1.0",
-    "webpack-node-externals": "^1.7.2"
+    "@nestjs/cli": "^8.0.0",
+    "@nestjs/schematics": "^8.0.0",
+    "@nestjs/testing": "^8.0.0",
+    "@types/express": "^4.17.13",
+    "@types/jest": "^27.0.1",
+    "@types/node": "^16.0.0",
+    "@types/passport-jwt": "^3.0.6",
+    "@types/passport-local": "^1.0.34",
+    "@types/supertest": "^2.0.11",
+    "@typescript-eslint/eslint-plugin": "^5.0.0",
+    "@typescript-eslint/parser": "^5.0.0",
+    "eslint": "^8.0.1",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prettier": "^4.0.0",
+    "jest": "^27.2.5",
+    "prettier": "^2.3.2",
+    "source-map-support": "^0.5.20",
+    "supertest": "^6.1.3",
+    "ts-jest": "^27.0.3",
+    "ts-loader": "^9.2.3",
+    "ts-node": "^10.0.0",
+    "tsconfig-paths": "^3.10.1",
+    "typescript": "^4.3.5"
   },
   "jest": {
     "moduleFileExtensions": [
@@ -65,18 +70,14 @@
       "ts"
     ],
     "rootDir": "src",
-    "testRegex": ".spec.ts$",
+    "testRegex": ".*\\.spec\\.ts$",
     "transform": {
       "^.+\\.(t|j)s$": "ts-jest"
     },
+    "collectCoverageFrom": [
+      "**/*.(t|j)s"
+    ],
     "coverageDirectory": "../coverage",
     "testEnvironment": "node"
-  },
-  "keywords": [
-    "nodejs",
-    "nestjs",
-    "nest",
-    "javascript",
-    "typescript"
-  ]
+  }
 }
