Added .idea and .vscode folders to ignore list

--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,9 @@
 .idea/**/tasks.xml
 .idea/dictionaries
 
+.idea/
+.vscode/
+
 # Sensitive or high-churn files:
 .idea/**/dataSources/
 .idea/**/dataSources.ids
