--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "te",
-  "version": "0.0.1",
-  "description": "",
-  "author": "",
+  "name": "testcase",
+  "version": "1.0.0",
+  "description": "TestCase for nodejs backend developer",
+  "author": "Nikolay <galek> Galko",
   "private": true,
-  "license": "UNLICENSED",
+  "license": "MIT",
   "scripts": {
     "prebuild": "rimraf dist",
     "build": "nest build",
