--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "ngnb",
-  "version": "0.0.1",
-  "description": "",
-  "author": "",
+  "name": "testcase",
+  "version": "1.0.0",
+  "description": "TestCase for nodejs backend developer",
+  "author": "Nikolay <galek> Galko",
   "private": true,
-  "license": "UNLICENSED",
+  "license": "MIT",
   "scripts": {
     "prebuild": "rimraf dist",
     "build": "nest build",
@@ -27,12 +27,14 @@
     "@nestjs/passport": "^8.0.1",
     "@nestjs/platform-express": "^8.0.0",
     "@nestjs/swagger": "^5.1.4",
+    "@willsoto/nestjs-prometheus": "^4.2.0",
     "compression": "^1.7.4",
     "csurf": "^1.11.0",
     "helmet": "^4.6.0",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
+    "prom-client": "^14.0.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
